fix spacing captions

--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -85,7 +85,7 @@
   }
 
   &__picture {
-    margin: 2em 1em 1em;
+    margin: 2em 1em;
     display: inline-block;
 
     &:last-child {
@@ -103,7 +103,7 @@
 
   &__caption {
     display: block;
-    padding: 1em;
+    padding: 1em 0 .5em;
     opacity: .8;
     color: white;
     font-size: .9em;
